# EURLexDemoApi

./: Dockerfile  README.md  pyproject.toml
eurlex_api/: lib_cfg.py  main.py  queries.py  utilities.py
eurlex_api/routers/: navlist.py  notice.py  search.py
